chore: fix wgac contrast

--- a/source/_assets/scss/_common.scss
+++ b/source/_assets/scss/_common.scss
@@ -5,7 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap");
 :root {
   --font: "Inter", sans-serif;
-  --body-color: #637381;
+  --body-color: #000000;
   --heading-color: #212b36;
   --primary-color: #184c4e;
   --white: #ffffff;
